--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@ envlist = {py37,py38,py39,py310}-{sqlite,postgresql}
 [testenv]
 extras = test
 commands =
-    coverage run --include=.*/analytic_purchase/* -m unittest discover -s tests
-    coverage report --include=.*/analytic_purchase/* --omit=*/tests/*
+    coverage run --include=./**/analytic_purchase/* -m unittest discover -s tests
+    coverage report --include=./**/analytic_purchase/* --omit=*/tests/*
 deps =
     coverage
     postgresql: psycopg2 >= 2.7.0
